--- a/backend/package.json
+++ b/backend/package.json
@@ -11,24 +11,29 @@
     "db:seed": "node src/utils/seed.js",
     "create-admin": "node src/utils/create-admin.js"
   },
-  "keywords": ["library", "management", "express", "postgresql"],
+  "keywords": [
+    "library",
+    "management",
+    "express",
+    "postgresql"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^7.0.12",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.35.2",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
-    "express-validator": "^7.0.1",
-    "nodemailer": "^6.9.7",
-    "node-cron": "^3.0.3",
-    "morgan": "^1.10.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
